Some changes in the donut card view transition to donut view

--- a/Happy Donuts/GoogleService-Info.plist
+++ b/Happy Donuts/GoogleService-Info.plist
@@ -19,15 +19,13 @@
 	<key>STORAGE_BUCKET</key>
 	<string>happydonutsapp.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:662925308624:ios:054778bc8cc23650d424d5</string>
 </dict>
